istio-config/4-istio-max-connections.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springfac-cb-max-conns
spec:
  host: springfactorialservice
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
