istio-config/5-istio-both.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springfac-cb-both
spec:
  host: springfactorialservice
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 2
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
