istio-config/istio-cb-fac-max-connection.yaml
#see https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: micronautfactorialservice-circuit-breaker
spec:
  host: micronautfactorialservice
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
