istio-config/istio-cb-fac-max-pending-requests.yaml
#see https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: max-pending-requests-circuit-breaker
spec:
  host: springfactorialservice
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 1
